--- a/src/App.css
+++ b/src/App.css
@@ -18,15 +18,13 @@ body {
   border-radius: 50%; }
 
 .container {
-  width: 90%;
-  margin-left: 5%;
+  height: 60vh;
   display: grid;
-  grid-template-columns: 44% 45%;
-  grid-row-gap: 10px;
-  grid-column-gap: 11%; }
+  grid-template-columns: 1fr repeat(2, minmax(130px, 400px)) 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 20px; }
   .container .dificuldade {
-    height: 144px;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     color: #FFF;
     display: flex;
@@ -37,17 +35,21 @@ body {
       text-decoration: none;
       color: #FFF; }
   .container .purple {
+    grid-column: 2 / 3;
     background: #845EC2; }
   .container .pinkpurple {
+    grid-column: 3 / 4;
     background: #D65DB1; }
   .container .pink {
-    grid-column: 1/span 2;
+    grid-column: 2 / 4;
     background: #FF6F91; }
   .container .orange {
+    grid-column: 2 / 3;
     background: #FF9671; }
     .container .orange a {
       color: #292929; }
   .container .yellow {
+    grid-column: 3 / 4;
     background: #FFC75F; }
     .container .yellow a {
       color: #292929; }
@@ -69,22 +71,16 @@ body {
       margin-top: 30px; }
 
 footer {
-  position: fixed;
   width: 100vw;
-  height: 6vh;
+  margin-top: 10px;
   bottom: 0;
   text-align: center;
   font-family: "Raleway", sans-serif;
   font-weight: 500;
   padding-bottom: 10px; }
+  footer a {
+    color: #000; }
 
 @media only screen and (min-width: 601px) {
-  .container {
-    margin-top: 100px;
-    grid-row-gap: 30px; }
-    .container .dificuldade {
-      height: 180px; }
-    .container .pink {
-      width: 100%; } }
-
-/*# sourceMappingURL=index.css.map */
+  .challenge-holder img {
+    width: 43vw; } }
